--- a/test_page.html
+++ b/test_page.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
 <body>
-<array-credit-lock url="/data.json"></array-credit-lock>
+<array-credit-lock url="/test_data.json"></array-credit-lock>
 </body>
 <script src="https://html.dev.credmo.com/assets/js/zepto.min.js"></script>
 <script src="https://html.dev.credmo.com/assets/js/utils.js"></script>
