--- a/test_page.html
+++ b/test_page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="eng">
-<link href="./styles/style.css" rel="stylesheet" type="text/css"/>
+<html lang="en">
 <body>
 <array-credit-lock url="/test_data.json"></array-credit-lock>
-</body>
-<script src="https://html.dev.credmo.com/assets/js/zepto.min.js"></script>
+
 <script src="https://html.dev.credmo.com/assets/js/utils.js"></script>
 <script src="https://html.dev.credmo.com/common/collapsible/collapsible.js"></script>
 <script type="module" src="./components/ArrayCreditLock.js"></script>
+</body>
 </html>
+
